--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /******************************************************************
-  Template Name: Azenta
-  Description: Azenta Properties HTML Template
+  Template Name: BHR Properties
+  Description: BHR Properties Properties HTML Template
   Author: colorlib
   Author URI: https://colorlib.com
   Version: 1.0
